force-app/main/default/objects/EA_Learner_Application__x/EA_Learner_Application__x.object-meta.xml
<CustomObject>
    <description>Supplies data from Ed Plus org on the Contact page section "EdPlus Salesforce - Earned Admissions"</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>EA_Learner_Application__c</externalName>
    <label>EA Learner Application (EdPlus)</label>
    <pluralLabel>EA Learner Applications (EdPlus)</pluralLabel>
</CustomObject>