force-app/main/default/objects/EA_Learner_Application__x/fields/Add_More_Courses__c.field-meta.xml
<CustomField>
    <fullName>Add_More_Courses__c</fullName>
    <externalDeveloperName>Add_More_Courses__c</externalDeveloperName>
    <label>Add More Courses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>