force-app/main/default/objects/EA_Learner_Application__x/fields/Age_At_Time_of_Survey__c.field-meta.xml
<CustomField>
    <fullName>Age_At_Time_of_Survey__c</fullName>
    <externalDeveloperName>Age_At_Time_of_Survey__c</externalDeveloperName>
    <label>Age At Time of Survey</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>