force-app/main/default/objects/EA_Learner_Application__x/fields/Already_Taken_Courses_On_List__c.field-meta.xml
<CustomField>
    <fullName>Already_Taken_Courses_On_List__c</fullName>
    <externalDeveloperName>Already_Taken_Courses_On_List__c</externalDeveloperName>
    <label>Already Taken Courses On List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>