force-app/main/default/objects/EA_Learner_Application__x/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <externalDeveloperName>Alternative_Email__c</externalDeveloperName>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>