force-app/main/default/objects/EA_Learner_Application__x/fields/Anticipated_Admit_Session__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Admit_Session__c</fullName>
    <externalDeveloperName>Anticipated_Admit_Session__c</externalDeveloperName>
    <label>Anticipated Admit Session</label>
    <length>18</length>
    <type>Text</type>
</CustomField>