force-app/main/default/objects/EA_Learner_Application__x/fields/ASURITE_ID__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_ID__c</fullName>
    <externalDeveloperName>ASURITE_ID__c</externalDeveloperName>
    <label>ASURITE ID</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>