force-app/main/default/objects/EA_Learner_Application__x/fields/ASURITE_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_Request_Date__c</fullName>
    <externalDeveloperName>ASURITE_Request_Date__c</externalDeveloperName>
    <label>ASURITE Request Date</label>
    <type>Date</type>
</CustomField>