force-app/main/default/objects/EA_Learner_Application__x/fields/ASURITE_Status__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_Status__c</fullName>
    <externalDeveloperName>ASURITE_Status__c</externalDeveloperName>
    <label>ASURITE Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>