force-app/main/default/objects/EA_Learner_Application__x/fields/ASURITE_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_Status_Date__c</fullName>
    <externalDeveloperName>ASURITE_Status_Date__c</externalDeveloperName>
    <label>ASURITE Status Date</label>
    <type>Date</type>
</CustomField>