force-app/main/default/objects/EA_Learner_Application__x/fields/Auto_Verified_EM_Override__c.field-meta.xml
<CustomField>
    <fullName>Auto_Verified_EM_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Auto_Verified_EM_Override__c</externalDeveloperName>
    <label>Auto-Verified EM Override</label>
    <type>Checkbox</type>
</CustomField>