force-app/main/default/objects/EA_Learner_Application__x/fields/Benefit_Type__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Type__c</fullName>
    <externalDeveloperName>Benefit_Type__c</externalDeveloperName>
    <inlineHelpText>1 - Partner Pays Eligibility and Conversion
2- Partner Pays Eligibility, Learner Pays Conversion
3- Learner Pays Eligibility, Partner Pays Conversion
4- Learner Pays Eligibility and Conversion</inlineHelpText>
    <label>Benefit Type</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>