force-app/main/default/objects/EA_Learner_Application__x/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <externalDeveloperName>Birthdate__c</externalDeveloperName>
    <label>Birthdate</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>