force-app/main/default/objects/EA_Learner_Application__x/fields/Collect_Demographic_Info__c.field-meta.xml
<CustomField>
    <fullName>Collect_Demographic_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Collect_Demographic_Info__c</externalDeveloperName>
    <label>Collect Demographic Info</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>