force-app/main/default/objects/EA_Learner_Application__x/fields/College_Attended__c.field-meta.xml
<CustomField>
    <fullName>College_Attended__c</fullName>
    <externalDeveloperName>College_Attended__c</externalDeveloperName>
    <label>College Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>