force-app/main/default/objects/EA_Learner_Application__x/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Completed__c</externalDeveloperName>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>