force-app/main/default/objects/EA_Learner_Application__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <externalDeveloperName>Contact__c</externalDeveloperName>
    <label>Contact</label>
    <length>18</length>
    <referenceTo>EdPlusContact__x</referenceTo>
    <relationshipLabel>EA Learner Applications</relationshipLabel>
    <relationshipName>EA_Learner_Applications</relationshipName>
    <type>ExternalLookup</type>
</CustomField>