force-app/main/default/objects/EA_Learner_Application__x/fields/Continuous_Enrollment_Support__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Enrollment_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Continuous_Enrollment_Support__c</externalDeveloperName>
    <label>Continuous Enrollment Support</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>