force-app/main/default/objects/EA_Learner_Application__x/fields/CPE_ID_Verify_Admin__c.field-meta.xml
<CustomField>
    <fullName>CPE_ID_Verify_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>CPE_ID_Verify_Admin__c</externalDeveloperName>
    <label>CPE ID Verify Admin</label>
    <type>Checkbox</type>
</CustomField>