force-app/main/default/objects/EA_Learner_Application__x/fields/Create_Learner_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Create_Learner_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Create_Learner_Enabled__c</externalDeveloperName>
    <label>Create Learner Enabled</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>