force-app/main/default/objects/EA_Learner_Application__x/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <externalDeveloperName>CreatedById</externalDeveloperName>
    <label>Created By ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>EA Learner Applications</relationshipLabel>
    <relationshipName>EA_Learner_Applications1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>