force-app/main/default/objects/EA_Learner_Application__x/fields/Credits_completed_Verified_Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits_completed_Verified_Credits__c</fullName>
    <externalDeveloperName>Credits_completed_Verified_Credits__c</externalDeveloperName>
    <label>Credits completed + Verified Credits</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>