force-app/main/default/objects/EA_Learner_Application__x/fields/Credits_in_path_possible_after_2204BC__c.field-meta.xml
<CustomField>
    <fullName>Credits_in_path_possible_after_2204BC__c</fullName>
    <externalDeveloperName>Credits_in_path_possible_after_2204BC__c</externalDeveloperName>
    <label>Credits in path - possible after 2204BC</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>