force-app/main/default/objects/EA_Learner_Application__x/fields/Current_GPA__c.field-meta.xml
<CustomField>
    <fullName>Current_GPA__c</fullName>
    <externalDeveloperName>Current_GPA__c</externalDeveloperName>
    <label>Current GPA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>