force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Application__c.field-meta.xml
<CustomField>
    <fullName>EA_Application__c</fullName>
    <externalDeveloperName>EA_Application__c</externalDeveloperName>
    <label>EA Application</label>
    <length>18</length>
    <type>Text</type>
</CustomField>