force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Credentials__c.field-meta.xml
<CustomField>
    <fullName>EA_Credentials__c</fullName>
    <externalDeveloperName>EA_Credentials__c</externalDeveloperName>
    <label>EA Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>