force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Credentials_Date__c.field-meta.xml
<CustomField>
    <fullName>EA_Credentials_Date__c</fullName>
    <externalDeveloperName>EA_Credentials_Date__c</externalDeveloperName>
    <label>EA Credentials Date</label>
    <type>Date</type>
</CustomField>