force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>EA_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>EA_Opt_In__c</externalDeveloperName>
    <label>EA Opt In</label>
    <type>Checkbox</type>
</CustomField>