force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>EA_Opt_In_Date__c</fullName>
    <externalDeveloperName>EA_Opt_In_Date__c</externalDeveloperName>
    <label>EA Opt In Date</label>
    <type>Date</type>
</CustomField>