force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Status__c.field-meta.xml
<CustomField>
    <fullName>EA_Status__c</fullName>
    <externalDeveloperName>EA_Status__c</externalDeveloperName>
    <label>EA Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>