force-app/main/default/objects/EA_Learner_Application__x/fields/EA_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>EA_Status_Date__c</fullName>
    <externalDeveloperName>EA_Status_Date__c</externalDeveloperName>
    <label>EA Status Date</label>
    <type>Date</type>
</CustomField>