force-app/main/default/objects/EA_Learner_Application__x/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Eligibility_Status__c</externalDeveloperName>
    <label>Eligibility Status</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>