force-app/main/default/objects/EA_Learner_Application__x/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalDeveloperName>Email__c</externalDeveloperName>
    <label>Email</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>