force-app/main/default/objects/EA_Learner_Application__x/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <externalDeveloperName>EMPLID__c</externalDeveloperName>
    <label>EMPLID</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>