force-app/main/default/objects/EA_Learner_Application__x/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <externalDeveloperName>Employee_Id__c</externalDeveloperName>
    <label>Employee Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>