force-app/main/default/objects/EA_Learner_Application__x/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <externalDeveloperName>Ethnicity__c</externalDeveloperName>
    <label>Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>