force-app/main/default/objects/EA_Learner_Application__x/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <externalDeveloperName>First_Name__c</externalDeveloperName>
    <label>First Name</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>