force-app/main/default/objects/EA_Learner_Application__x/fields/First_Portal_Sign_In__c.field-meta.xml
<CustomField>
    <fullName>First_Portal_Sign_In__c</fullName>
    <externalDeveloperName>First_Portal_Sign_In__c</externalDeveloperName>
    <label>First Portal Sign In</label>
    <type>DateTime</type>
</CustomField>