force-app/main/default/objects/EA_Learner_Application__x/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <externalDeveloperName>Gender__c</externalDeveloperName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>