force-app/main/default/objects/EA_Learner_Application__x/fields/High_School_Attended__c.field-meta.xml
<CustomField>
    <fullName>High_School_Attended__c</fullName>
    <externalDeveloperName>High_School_Attended__c</externalDeveloperName>
    <label>High School Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>