force-app/main/default/objects/EA_Learner_Application__x/fields/High_School_State__c.field-meta.xml
<CustomField>
    <fullName>High_School_State__c</fullName>
    <externalDeveloperName>High_School_State__c</externalDeveloperName>
    <label>High School State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>