force-app/main/default/objects/EA_Learner_Application__x/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <externalDeveloperName>Household_Income__c</externalDeveloperName>
    <label>Household Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>