force-app/main/default/objects/EA_Learner_Application__x/fields/ID_Verification_denied_message__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification_denied_message__c</fullName>
    <externalDeveloperName>ID_Verification_denied_message__c</externalDeveloperName>
    <label>ID Verification Denied Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>