force-app/main/default/objects/EA_Learner_Application__x/fields/ID_Verification_Portal_Expiration__c.field-meta.xml
<CustomField>
    <fullName>ID_Verification_Portal_Expiration__c</fullName>
    <externalDeveloperName>ID_Verification_Portal_Expiration__c</externalDeveloperName>
    <label>ID Verification Portal Expiration</label>
    <type>Date</type>
</CustomField>