force-app/main/default/objects/EA_Learner_Application__x/fields/ID_Verify__c.field-meta.xml
<CustomField>
    <fullName>ID_Verify__c</fullName>
    <externalDeveloperName>ID_Verify__c</externalDeveloperName>
    <label>ID Verify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>