force-app/main/default/objects/EA_Learner_Application__x/fields/ID_Verify_Administrator__c.field-meta.xml
<CustomField>
    <fullName>ID_Verify_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ID_Verify_Administrator__c</externalDeveloperName>
    <label>ID Verify Administrator</label>
    <type>Checkbox</type>
</CustomField>