force-app/main/default/objects/EA_Learner_Application__x/fields/Intended_Degree_Seeking_Time__c.field-meta.xml
<CustomField>
    <fullName>Intended_Degree_Seeking_Time__c</fullName>
    <externalDeveloperName>Intended_Degree_Seeking_Time__c</externalDeveloperName>
    <label>Intended Degree Seeking Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>