force-app/main/default/objects/EA_Learner_Application__x/fields/Is_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Is_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Administrator__c</externalDeveloperName>
    <label>Is Administrator</label>
    <type>Checkbox</type>
</CustomField>