force-app/main/default/objects/EA_Learner_Application__x/fields/Is_Earned_Admission__c.field-meta.xml
<CustomField>
    <fullName>Is_Earned_Admission__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Earned_Admission__c</externalDeveloperName>
    <label>Is Earned Admission</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>