force-app/main/default/objects/EA_Learner_Application__x/fields/Is_Partner_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Partner_Active__c</externalDeveloperName>
    <label>Is Partner Active</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>