force-app/main/default/objects/EA_Learner_Application__x/fields/Is_Test_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Is_Test_Account__c</externalDeveloperName>
    <label>Is Test Account</label>
    <type>Checkbox</type>
</CustomField>