force-app/main/default/objects/EA_Learner_Application__x/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <externalDeveloperName>Last_Name__c</externalDeveloperName>
    <label>Last Name</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>