force-app/main/default/objects/EA_Learner_Application__x/fields/Last_Portal_Sign_In__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_Sign_In__c</fullName>
    <externalDeveloperName>Last_Portal_Sign_In__c</externalDeveloperName>
    <label>Last Portal Sign In</label>
    <type>DateTime</type>
</CustomField>