force-app/main/default/objects/EA_Learner_Application__x/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <externalDeveloperName>LastActivityDate</externalDeveloperName>
    <label>Last Activity Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Date</type>
</CustomField>