force-app/main/default/objects/EA_Learner_Application__x/fields/Learner__c.field-meta.xml
<CustomField>
    <fullName>Learner__c</fullName>
    <externalDeveloperName>Learner__c</externalDeveloperName>
    <label>Learner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>