force-app/main/default/objects/EA_Learner_Application__x/fields/Max_Active_Enrollments_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Active_Enrollments_Allowed__c</fullName>
    <externalDeveloperName>Max_Active_Enrollments_Allowed__c</externalDeveloperName>
    <label>Max Active Enrollments Allowed</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>