force-app/main/default/objects/EA_Learner_Application__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>EA Learner Application ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>