force-app/main/default/objects/EA_Learner_Application__x/fields/Needs_Enrollment_Support__c.field-meta.xml
<CustomField>
    <fullName>Needs_Enrollment_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Needs_Enrollment_Support__c</externalDeveloperName>
    <label>Needs Enrollment Support</label>
    <type>Checkbox</type>
</CustomField>