force-app/main/default/objects/EA_Learner_Application__x/fields/Non_EA_Courses_Needed__c.field-meta.xml
<CustomField>
    <fullName>Non_EA_Courses_Needed__c</fullName>
    <externalDeveloperName>Non_EA_Courses_Needed__c</externalDeveloperName>
    <label>Non EA Courses Needed</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>