force-app/main/default/objects/EA_Learner_Application__x/fields/Number_Of_Course_Needed_For_Admission__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Course_Needed_For_Admission__c</fullName>
    <externalDeveloperName>Number_Of_Course_Needed_For_Admission__c</externalDeveloperName>
    <label>Number Of Course Needed For Admission</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>