force-app/main/default/objects/EA_Learner_Application__x/fields/Number_of_Credits_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits_Completed__c</fullName>
    <externalDeveloperName>Number_of_Credits_Completed__c</externalDeveloperName>
    <label>Number of Credits Completed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>