force-app/main/default/objects/EA_Learner_Application__x/fields/Number_of_Credits_Needed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credits_Needed__c</fullName>
    <externalDeveloperName>Number_of_Credits_Needed__c</externalDeveloperName>
    <label>Total Number of Credits Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>