force-app/main/default/objects/EA_Learner_Application__x/fields/OEA_Partner__c.field-meta.xml
<CustomField>
    <fullName>OEA_Partner__c</fullName>
    <externalDeveloperName>OEA_Partner__c</externalDeveloperName>
    <label>OEA Partner</label>
    <length>18</length>
    <referenceTo>OEA_Partner_EdPlus__x</referenceTo>
    <relationshipLabel>EA Learner Applications (EdPlus)</relationshipLabel>
    <relationshipName>EA_Learner_Applications_EdPlus</relationshipName>
    <type>ExternalLookup</type>
</CustomField>