force-app/main/default/objects/EA_Learner_Application__x/fields/OpenEdX_Id__c.field-meta.xml
<CustomField>
    <fullName>OpenEdX_Id__c</fullName>
    <externalDeveloperName>OpenEdX_Id__c</externalDeveloperName>
    <label>OpenEdX Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>