force-app/main/default/objects/EA_Learner_Application__x/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <externalDeveloperName>OwnerId</externalDeveloperName>
    <label>Owner ID</label>
    <length>18</length>
    <referenceTo>EdPlusUser__x</referenceTo>
    <relationshipLabel>EA Learner Applications</relationshipLabel>
    <relationshipName>EA_Learner_Applications</relationshipName>
    <type>ExternalLookup</type>
</CustomField>