force-app/main/default/objects/EA_Learner_Application__x/fields/Partner_URL_Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Partner_URL_Sub_Domain__c</fullName>
    <externalDeveloperName>Partner_URL_Sub_Domain__c</externalDeveloperName>
    <label>Partner URL Sub-Domain</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>