force-app/main/default/objects/EA_Learner_Application__x/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <externalDeveloperName>Phone__c</externalDeveloperName>
    <label>Phone</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>