force-app/main/default/objects/EA_Learner_Application__x/fields/Registration_Origin__c.field-meta.xml
<CustomField>
    <fullName>Registration_Origin__c</fullName>
    <externalDeveloperName>Registration_Origin__c</externalDeveloperName>
    <label>Registration Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>