force-app/main/default/objects/EA_Learner_Application__x/fields/Separation_Date__c.field-meta.xml
<CustomField>
    <fullName>Separation_Date__c</fullName>
    <externalDeveloperName>Separation_Date__c</externalDeveloperName>
    <label>Separation Date</label>
    <type>Date</type>
</CustomField>