force-app/main/default/objects/EA_Learner_Application__x/fields/Student_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Student_Portal_URL__c</fullName>
    <externalDeveloperName>Student_Portal_URL__c</externalDeveloperName>
    <label>Student Portal URL</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>