force-app/main/default/objects/EA_Learner_Application__x/fields/Total_Courses_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Courses_Enrolled__c</fullName>
    <externalDeveloperName>Total_Courses_Enrolled__c</externalDeveloperName>
    <label>Total Courses Enrolled</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>