force-app/main/default/objects/EA_Learner_Application__x/fields/View_As__c.field-meta.xml
<CustomField>
    <fullName>View_As__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>View_As__c</externalDeveloperName>
    <label>View As</label>
    <type>Checkbox</type>
</CustomField>