force-app/main/default/objects/EA_Learner_Application__x/fields/Which_describes_your_college_experience__c.field-meta.xml
<CustomField>
    <fullName>Which_describes_your_college_experience__c</fullName>
    <externalDeveloperName>Which_describes_your_college_experience__c</externalDeveloperName>
    <label>Which describes your college experience?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>