force-app/main/default/objects/EA_Learner_Application__x/fields/Which_describes_your_HS_education__c.field-meta.xml
<CustomField>
    <fullName>Which_describes_your_HS_education__c</fullName>
    <externalDeveloperName>Which_describes_your_HS_education__c</externalDeveloperName>
    <label>Which describes HS education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>