force-app/main/default/objects/EA_Learner_Application__x/fields/X2204BC_Eligible_Completed_Credits__c.field-meta.xml
<CustomField>
    <fullName>X2204BC_Eligible_Completed_Credits__c</fullName>
    <externalDeveloperName>X2204BC_Eligible_Completed_Credits__c</externalDeveloperName>
    <label>2204BC + Eligible + Completed Credits</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>